src/styles/components/Hero.module.css
@import url('../global.module.css');

.hero {
	position: relative;
	min-height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	overflow: hidden;
}

.hero::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-image: linear-gradient(rgba(30, 7, 43, 0.6), rgba(30, 7, 43, 0.6)),
		url('../../lib/images/hero_image.png');
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	z-index: -1;
}

.hero--webp::before {
	background-image: linear-gradient(rgba(30, 7, 43, 0.6), rgba(30, 7, 43, 0.6)),
		url('../../lib/images/hero_image.webp');
}

.hero__content {
	max-width: 700px;
	padding: 1rem;
}

.hero__heading {
	font-family: var(--font-heading);
	font-size: 3rem;
	color: var(--color-heading);
	margin-bottom: 0.5rem;
}

.hero__headingAccent {
	font-family: var(--font-heading);
	font-size: 3rem;
	color: var(--color-action);
}

.hero__subheading {
	font-family: var(--font-body);
	font-size: 1.5rem;
	color: var(--color-heading);
	margin-bottom: 1rem;
}

.hero__text {
	font-family: var(--font-body);
	font-size: var(--font-size-large);
	color: var(--color-text);
	margin-bottom: 1.5rem;
}

.hero__button {
	display: inline-block;
	font-family: var(--font-body);
	font-size: var(--font-size-large);
	color: var(--color-text);
	background-color: var(--color-heading);
	padding: 0.5rem 1rem;
	border-radius: 5px;
	text-decoration: none;
	cursor: pointer;
}

.hero__button a {
	color: var(--color-text);
	text-decoration: none;
}

.hero__button:hover {
	background-color: var(--color-action);
}

@media (min-width: 768px) {
	.hero__content {
		text-align: left;
		align-self: flex-start;
	}

	.hero__heading {
		font-size: 4.5rem;
	}

	.hero__headingAccent {
		font-size: 4.5rem;
	}

	.hero__subheading {
		font-size: 2rem;
	}

	.hero__text {
		font-size: var(--font-size-extra-large);
	}
}

